--- a/index.html
+++ b/index.html
@@ -49,6 +49,33 @@
         </div>
       </div>
     </div>
+    <div class="features page-part" id="Features">
+      <div class="heading">
+        <h2>Features</h2>
+        <p>Our aim is to make it quick and easy for you to access your favourite websites.
+          Your bookmarks sync between your devices so you can access them on the go.</p>
+      </div>
+      <div class="navigator">
+        <ul>
+          <li><button data-case="1" class="active">Simple Bookmarking</button></li>
+          <li><button data-case="2">Speedy Searching</button></li>
+          <li><button data-case="3">Easy Sharing</button></li>
+        </ul>
+      </div>
+      <div class="tab" data-case="1">
+        <div class="flex">
+          <div class="img">
+            <img src="images/illustration-features-tab-1.svg" alt="" aria-hidden="true">
+          </div>
+          <div class="text">
+            <h3>Bookmark in one click</h3>
+            <p>Organize your bookmarks however you like. Our simple drag-and-drop interface
+              gives you complete control over how you manage your favourite sites.</p>
+            <button class="more">More Info</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
     <!-- <div class="attribution">
